Bætti við viewOneEvent

--- a/timeandplace/AndroidManifest.xml
+++ b/timeandplace/AndroidManifest.xml
@@ -15,5 +15,6 @@
         </activity>
 		<activity android:name=".addEvent"></activity>
 		<activity android:name=".viewEvent"></activity>
+		<activity android:name="viewOneEvent"></activity>
     </application>
 </manifest>
