--- a/timeandplace/AndroidManifest.xml
+++ b/timeandplace/AndroidManifest.xml
@@ -23,5 +23,7 @@
 			android:label="@string/service_name"
 		>
 		</service>
+		<activity android:name="gpstest"></activity>
     </application>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
