--- a/timeandplace/AndroidManifest.xml
+++ b/timeandplace/AndroidManifest.xml
@@ -3,6 +3,14 @@
       package="is.hi.lucky7.timeandplace"
       android:versionCode="1"
       android:versionName="1.0">
+      
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> 
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	
     <uses-sdk android:minSdkVersion="7" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
@@ -17,6 +25,7 @@
 		<activity android:name=".viewEvent"></activity>
 		<activity android:name="viewOneEvent"></activity>
 		<activity android:name="event_test"></activity>
+		<activity android:name="Map"></activity>
 		<service
 			android:name=".TAPService"
 			android:process=":tap_process" 
